Initialize project test for ubitransport
